; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_gui_gtk.c_convert_localized_message.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_gui_gtk.c_convert_localized_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@output_conv = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@CONV_NONE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32**, i8*)* @convert_localized_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @convert_localized_message(i32** %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32**, align 8
  %5 = alloca i8*, align 8
  store i32** %0, i32*** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @output_conv, i32 0, i32 0), align 8
  %7 = load i64, i64* @CONV_NONE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i8*, i8** %5, align 8
  store i8* %10, i8** %3, align 8
  br label %22

11:                                               ; preds = %2
  %12 = load i32**, i32*** %4, align 8
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @vim_free(i32* %13)
  %15 = load i8*, i8** %5, align 8
  %16 = bitcast i8* %15 to i32*
  %17 = call i32* @string_convert(%struct.TYPE_3__* @output_conv, i32* %16, i32* null)
  %18 = load i32**, i32*** %4, align 8
  store i32* %17, i32** %18, align 8
  %19 = load i32**, i32*** %4, align 8
  %20 = load i32*, i32** %19, align 8
  %21 = bitcast i32* %20 to i8*
  store i8* %21, i8** %3, align 8
  br label %22

22:                                               ; preds = %11, %9
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i32 @vim_free(i32*) #1

declare dso_local i32* @string_convert(%struct.TYPE_3__*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
